1999-01-14  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Map.m, collection.h (compareCStrings): New function.

	* Map.h (compareIDs, compareIntegers, compareUnsignedIntegers,
	compareCStrings): Declare.
	
	* Map.m ([Map_c -lispOut:deep:], [Map_c -hdf5Out:deep:]): Use DSIZE.
	([Map_c -hdf5Out:deep:]): Handle compareFunc of integers differently
	from IDs.

	* Collections.m ([Collection_any -hdf5Out:deep:]): Use DSIZE.

1999-01-14  Alex Lancaster  <alex@santafe.edu>

	* Map.m ([Map_c -lispOut:deep:]): compareUnsigned ->
	compareUnsignedIntegers

1999-01-14  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Map.m, collections.h (compareUnsignedIntegers): New function.
	([Map_c -lispOut:deep:], [Map_c -lispInCreate:]): Handle
	compareUnsignedIntegers case.

	* Collection.[hm], Map.[hm]: Always declare hdf5Out:deep:. Don't
	include swarmconfig.h.  Call hdf5_not_available when HAVE_HDF5 not
	defined.  

	* Collection.m, Map.m: Implement deep serialization for 
	hdf5Out:deep:.

1999-01-13  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Map.[hm]: Include swarmconfig.h.
	([Map_c -allSameClass], [Map_c -hdf5Out:deep:]): New methods.

	* Collection.[hm]: Include swarmconfig.h.
	([Collection_any hdf5Out:deep:]): New method.

	* Collection.m ([Colleciton_any hdf5Out:deep:]): Call
	numberRecord: on dataset.

1999-01-12  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Collection.[hm], collections.h ([Collection_any -allSameClass]):
	New method.

1999-01-12  Vladimir Jojic  <vjojic@wijiji.santafe.edu>

	* collections.h (PermutedIndex):  Declare -reshuffle.

	* Permutation.[hm] ([PermutationItem_c -describe:]): New method

	* Collection.[hm] ([PermutedIndex -reshuffle]): New method.

1999-01-10  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* List.[hm] ([List_any -lispOut:deep:]): Renamed from lispOut:; added
	deep serialization boolean option.

	* Map.[hm]: Likewise.

1999-01-09  Marcus G. Daniels  <mgd@chama.santafe.edu>
